[project]
name = "deep-visual-geo-localization-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easydict>=1.13",
    "einops>=0.8.1",
    "faiss-cpu>=1.11.0",
    "googledrivedownloader>=1.1.0",
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchscan>=0.1.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "typer>=0.16.0",
]
